[package]
name = "rusty_tokio"
version = "0.1.0"
edition = "2021"
description = "A hand-rolled, from-scratch async runtime: multi-threaded work-stealing scheduler, epoll-based reactor, timers, and async sync primitives."
license = "MIT"

# `rusty_tokio-macros` (the `#[main]`/`#[test]` proc-macro attributes)
# has to be its own crate -- a `proc-macro = true` crate can't export
# anything else alongside its proc-macros -- so this package's own
# manifest doubles as the workspace root, mirroring tokio's own
# `tokio`/`tokio-macros` split.
[workspace]
members = ["rusty_tokio-macros"]

[dependencies]
# See "Why a separate crate" in rusty_tokio-macros' own docs.
rusty_tokio-macros = { path = "rusty_tokio-macros", version = "0.1.0" }
libc = "0.2"
# `platform` is pure portable trait/type definitions (no I/O, no OS
# dependency), so it's used on every target. `platform-linux`/
# `platform-macos` -- the concrete per-OS socket backends -- only make
# sense, and only build, on their respective OS. Pinned to the same rev
# across all three so they all resolve to the identical `platform`
# crate instance (mixing revs would make e.g. `platform::error::
# PlatformError` from one checkout a different type than from another).
platform = { git = "https://github.com/baileyrd/rustils", rev = "dbf57020b7020965557c9c3d058ad3e9ca875235" }
# Optional (see the `futures-io-compat` feature below): a small, stable,
# widely-depended-on crate that exists specifically to let unrelated
# async I/O implementations interoperate -- issue #7's second option,
# preferred over pulling in all of tokio just for its I/O traits.
futures-io = { version = "0.3", optional = true }
# Optional (see the `tracing` feature below): lets every spawned task
# emit a `tracing::Span` shaped exactly the way real (unstable) tokio's
# own instrumentation shapes it, so the real `console-subscriber`/
# `tokio-console` tool -- built against that wire format, not this crate
# specifically -- works against this runtime with zero changes on its
# end. See `task::trace`'s own docs for exactly which parts of tokio's
# full console support this covers.
tracing = { version = "0.1", optional = true, default-features = false, features = [
    "std",
] }

[features]
# Implements `futures_io::{AsyncRead, AsyncWrite}` for a `Compat<T>`
# wrapper around anything implementing this crate's own traits (see
# `io::compat`'s docs) -- lets third-party codec/framing crates written
# against `futures-io` (or, transitively, anything built on it) accept
# this crate's `TcpStream`/`UnixStream`/etc. Off by default so the
# `futures-io` dependency is never pulled in unless asked for.
futures-io-compat = ["dep:futures-io"]
# A real io_uring-backed reactor (Linux only), selectable at compile
# time in place of the default epoll backend -- see
# `io::reactor::io_uring`'s docs for scope (readiness only, via
# IORING_OP_POLL_ADD; the actual read/write syscalls are unchanged) and
# why. Off by default: epoll is the proven, always-available default:
# this is for consumers who want to opt into io_uring specifically.
io-uring-reactor = ["dep:io-uring"]
# Instruments every spawned task with a `tracing::Span` (target
# `tokio::task`/`tokio::task::blocking`, span name `runtime.spawn`,
# `kind`/`task.name`/`task.id`/`loc.file`/`loc.line`/`loc.col` fields) so
# `console-subscriber` (the `tokio-console` terminal UI's data source)
# can show this runtime's live tasks. Off by default -- like
# `futures-io-compat`, the `tracing` dependency is never pulled in unless
# asked for. See `task::trace`'s module docs for exactly what's covered
# (task registration, name, spawn location, poll count, busy/idle time)
# and what's deliberately not (waker clone/drop/self-wake stats,
# resource/async-op instrumentation for `sync` primitives).
tracing = ["dep:tracing"]

[target.'cfg(target_os = "linux")'.dependencies]
platform-linux = { git = "https://github.com/baileyrd/rustils", rev = "dbf57020b7020965557c9c3d058ad3e9ca875235" }
# Optional (see the `io-uring-reactor` feature below): handles ring
# setup/mmap and SQE/CQE layout safely -- issue #9 explicitly named this
# crate (what tokio-uring/glommio/monoio are all built on) as the usual
# reference point over hand-rolling raw io_uring_setup/io_uring_enter
# syscalls and ring memory-mapping from scratch with no loom-style
# verification tooling to trust it, the same reasoning behind not
# hand-rolling a lock-free deque for issue #8. Target-gated to Linux
# (like `platform-linux` above) since the crate itself is Linux-only --
# unlike `futures-io`, there's no cross-platform reason to leave it
# unconditional even for `[dependencies]` purposes.
io-uring = { version = "0.6", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
platform-macos = { git = "https://github.com/baileyrd/rustils", rev = "dbf57020b7020965557c9c3d058ad3e9ca875235" }

[dev-dependencies]
# Unconditional here (unlike the optional `[dependencies]` entry above)
# so `tests/futures_io_compat.rs` can call the trait's methods directly
# -- `required-features` below still skips building that one test
# target unless the `futures-io-compat` feature is actually enabled.
futures-io = "0.3"
# Same reasoning as `futures-io` above, for `tests/tracing_instrumentation.rs`
# -- that test implements its own minimal `tracing::Subscriber` to
# inspect emitted spans directly, so it needs the crate unconditionally
# even though `required-features` below skips the test target unless
# the `tracing` feature is enabled.
tracing = { version = "0.1", default-features = false, features = ["std"] }

[profile.release]
debug = true

[[bench]]
name = "timers"
harness = false

[[bench]]
name = "scheduler"
harness = false

[[test]]
name = "futures_io_compat"
required-features = ["futures-io-compat"]

[[test]]
name = "tracing_instrumentation"
required-features = ["tracing"]
